Обобщенные правила по простою

--- a/src/content/posts/articles/generalized-downtime.mdx
+++ b/src/content/posts/articles/generalized-downtime.mdx
@@ -1,6 +1,6 @@
 ---
-title: downtime
-description: desc
+title: Обобщенные правила по простою
+description: Обобщенные правила по простою
 date: 2023-05-17
 tags:
   - downtime
@@ -28,7 +28,7 @@ tags:
 
 ## Масштаб
 
-Любая конкретная деятельность во время простоя имеет область действия, которая определяет количество прогресса, необходимого для ее завершения. Масштаб — это мера того, сколько времени и усилий требуется для выполнения задачи.
+Любая конкретная деятельность во время простоя имеет область действия, которая определяет количество прогресса, необходимого для ее завершения. **Масштаб** — это мера того, сколько времени и усилий требуется для выполнения задачи.
 
 | Масштаб     | Прогресс | Пример                                                                   |
 |-------------|----------|--------------------------------------------------------------------------|
@@ -44,7 +44,7 @@ tags:
 
 ## Прогресс
 
-Прогресс — это мера того, какую часть задачи вы выполнили. Как только вы достигнете количества Прогресса, требуемого Масштабом задачи, вы завершите задание.
+**Прогресс** — это мера того, какую часть задачи вы выполнили. Как только вы достигнете количества Прогресса, требуемого Масштабом задачи, вы завершите задание.
 
 Для каждого приращения времени, когда вы выполняете действие, вы совершаете проверку характеристики, заданную задачей. КС проверки также определяется задачей.
 
@@ -65,11 +65,15 @@ tags:
 
 Большинство действий имеют определенную форму денежных затрат, будь то аванс, затраченное приращение времени или и то, и другое. Каждый вид деятельности определяет свои затраты. Вы должны оплатить стоимость, необходимую для выполнения деятельности.
 
-## Вариант: постоянный прогресс
+<Aside>
+
+Вариант: постоянный прогресс
 
 Вместо броска для определения прогресса вы можете использовать этот вариант, чтобы сделать процесс менее изменчивым.
 
 Сравните пассивное значение навыка персонажа (10 + бонус персонажей к этой проверке) с КС задания. Если он превосходит КC, персонаж получает 2 прогресса за приращение времени. В случае если пассивное значение меньше, персонаж получает +1 прогресс за шаг.
+
+</Aside>
 
 ## Пример деятельности
 
